--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,7 +19,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Asap+Condensed&family=Rajdhani:wght@500&display=swap" rel="stylesheet">
 
   <script src="https://kit.fontawesome.com/604581e78a.js" crossorigin="anonymous"></script>
-
+{{!-- 
   <style>table {
   border-collapse: collapse;
 }
@@ -28,7 +28,7 @@ td, th {
   border: 1px solid #999;
   padding: 0.5rem;
   text-align: left;
-}</style>
+}</style> --}}
 </head>
 
 <body>
